# Lab_programmazione2025

./: CMakeLists.txt  Gestore.cpp  Gestore.h  Transazione.cpp  Transazione.h  main.cpp
Test/: test1.cpp
